[package]
name = "emacs-key"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "emacs-key"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
]}
