[package]
name = "mkemacs"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "mkemacs"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
]}
